src/main/java/com/example/shopapp/error/exception/InvalidStateException.java
package com.example.shopapp.error.exception;

public class InvalidStateException extends Exception{

    public InvalidStateException(String message) {
        super(message);
    }
}
